--- a/css/styles.css
+++ b/css/styles.css
@@ -204,12 +204,11 @@ h1 {
 
 h2 {
     font-size: 1.71rem;
-    font-weight: normal;
+    font-weight: 700;
     line-height: 1.43;
     padding: 0 0 1px;       /* 余白指定（up, side, down）これしないと下線が文字にかぶるため */
     margin: 60px auto 10px;        /*box-border-outside*/
-    color: var(--main-color);
-    border-bottom: solid 1.5px var(--main-color);
+    color: rgb(51, 51, 51);
 }
 
 
